# fancy

./: README.md  fancy.ipynb  pyproject.toml
data/: Fancy - approach group.csv  Fancy - default_dive_cards.csv  Fancy - dive_cards.csv  all_dive_cards.csv
fancy_cards/: dive_cards.py
